5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1716_2504.log
== TEST (2019-05-11 22:21:04) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml+int(input(percentual de multiplicaçao dos leucocitos: ))


qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos"))
pmv=int(input("percentual de multiplicaçao do virus: "))/100
pml+int(input("percentual de multiplicaçao dos leucocitos: "))/100

dias=0

while ( qil == qic/2):
	qic = qic + ( qic * pmv )
	qil = qil + ( qil * pml )
	dias = dias + 1
	print(dias)
	
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:21:30) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml+int(input(percentual de multiplicaçao dos leucocitos: ))


qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos"))
pmv=int(input("percentual de multiplicaçao do virus: "))/100
pml+int(input("percentual de multiplicaçao dos leucocitos: "))/100

#variavel contadora
dias=0

while ( qil == qic/2):
	qic = qic + ( qic * pmv )
	qil = qil + ( qil * pml )
	dias = dias + 1
	print(dias)
	
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:21:54) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml+int(input(percentual de multiplicaçao dos leucocitos: ))


qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicaçao do virus: "))/100
pml+int(input("percentual de multiplicaçao dos leucocitos: "))/100

#variavel contadora
dias=0

while ( qil == qic/2):
	qic = qic + ( qic * pmv )
	qil = qil + ( qil * pml )
	dias = dias + 1
	print(dias)
	
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:22:27) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml+int(input(percentual de multiplicaçao dos leucocitos: ))


qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicaçao do virus: "))/100
pml=int(input("percentual de multiplicaçao dos leucocitos: "))/100

#variavel contadora
dias=0

while ( qil == qic/2):
	qic = qic + ( qic * pmv )
	qil = qil + ( qil * pml )
	dias = dias + 1
	print(dias)
	
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:22:31) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicaçao do virus: "))/100
pml=int(input("percentual de multiplicaçao dos leucocitos: "))/100

#variavel contadora
dias=0

while ( qil == qic/2):
	qic = qic + ( qic * pmv )
	qil = qil + ( qil * pml )
	dias = dias + 1
	print(dias)
	
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:24:04) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicaçao do virus: "))/100
pml=int(input("percentual de multiplicaçao dos leucocitos: "))/100

#variavel contadora
dias=0

while ( qic == qil/2):
	qic = qic + ( qic * pmv )
	qil = qil + ( qil * pml )
	dias = dias + 1
print(dias)
	
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:24:32) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))/100
pml=int(input("percentual de multiplicacao dos leucocitos: "))/100

#variavel contadora
dias=0

while ( qic == qil/2):
	qic = qic + ( qic * pmv )
	qil = qil + ( qil * pml )
	dias = dias + 1
print(dias)
	
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:26:02) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))/100
pml=int(input("percentual de multiplicacao dos leucocitos: "))/100

#variavel contadora
dias=0

while ( qic == qil/2):
	qic = qic + ( qic * pmv )
	qil = qil + ( qil * pml )
	dias = dias + 1
print(dias)
	
	
	
	

-- EXECUTION TIME:
0.205723
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
0
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
0
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:26:02) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))/100
pml=int(input("percentual de multiplicacao dos leucocitos: "))/100

#variavel contadora
dias=0

while ( qic == qil/2):
	qic = qic + ( qic * pmv )
	qil = qil + ( qil * pml )
	dias = dias + 1
print(dias)
	
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:28:22) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


quanInCo = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia:"))
quanInLeu = int(input("Quantidade inicial de leucocitos no sangue:"))
PMultV = int(input("Percentual de multilicacao diaria do virus:"))/100
PMultL = int(input("Percentual de multilicacao diaria dos leucocitos:"))/100

dias = 0
while(quanInCo == quanInLeu/2):
	quanInCo = quanInCo + (quanInCo * PMultV)
	quanInLeu = quanInLeu + (quanInLeu * PMultL)
	dias = dias + 1
-- EXECUTION TIME:
0.183099
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:28:23) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


quanInCo = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia:"))
quanInLeu = int(input("Quantidade inicial de leucocitos no sangue:"))
PMultV = int(input("Percentual de multilicacao diaria do virus:"))/100
PMultL = int(input("Percentual de multilicacao diaria dos leucocitos:"))/100

dias = 0
while(quanInCo == quanInLeu/2):
	quanInCo = quanInCo + (quanInCo * PMultV)
	quanInLeu = quanInLeu + (quanInLeu * PMultL)
	dias = dias + 1
-- EXECUTION TIME:
0.139175
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:28:24) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


quanInCo = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia:"))
quanInLeu = int(input("Quantidade inicial de leucocitos no sangue:"))
PMultV = int(input("Percentual de multilicacao diaria do virus:"))/100
PMultL = int(input("Percentual de multilicacao diaria dos leucocitos:"))/100

dias = 0
while(quanInCo == quanInLeu/2):
	quanInCo = quanInCo + (quanInCo * PMultV)
	quanInLeu = quanInLeu + (quanInLeu * PMultL)
	dias = dias + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:28:24) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


quanInCo = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia:"))
quanInLeu = int(input("Quantidade inicial de leucocitos no sangue:"))
PMultV = int(input("Percentual de multilicacao diaria do virus:"))/100
PMultL = int(input("Percentual de multilicacao diaria dos leucocitos:"))/100

dias = 0
while(quanInCo == quanInLeu/2):
	quanInCo = quanInCo + (quanInCo * PMultV)
	quanInLeu = quanInLeu + (quanInLeu * PMultL)
	dias = dias + 1
-- EXECUTION TIME:
0.155042
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:28:25) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


quanInCo = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia:"))
quanInLeu = int(input("Quantidade inicial de leucocitos no sangue:"))
PMultV = int(input("Percentual de multilicacao diaria do virus:"))/100
PMultL = int(input("Percentual de multilicacao diaria dos leucocitos:"))/100

dias = 0
while(quanInCo == quanInLeu/2):
	quanInCo = quanInCo + (quanInCo * PMultV)
	quanInLeu = quanInLeu + (quanInLeu * PMultL)
	dias = dias + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:28:26) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


quanInCo = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia:"))
quanInLeu = int(input("Quantidade inicial de leucocitos no sangue:"))
PMultV = int(input("Percentual de multilicacao diaria do virus:"))/100
PMultL = int(input("Percentual de multilicacao diaria dos leucocitos:"))/100

dias = 0
while(quanInCo == quanInLeu/2):
	quanInCo = quanInCo + (quanInCo * PMultV)
	quanInLeu = quanInLeu + (quanInLeu * PMultL)
	dias = dias + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:29:24) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


quanInCo = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia:"))
quanInLeu = int(input("Quantidade inicial de leucocitos no sangue:"))
PMultV = int(input("Percentual de multilicacao diaria do virus:"))/100
PMultL = int(input("Percentual de multilicacao diaria dos leucocitos:"))/100

dias = 0
while(quanInCo == quanInLeu/2):
	quanInCo = quanInCo + (quanInCo * PMultV)
	quanInLeu = quanInLeu + (quanInLeu * PMultL)
	dias = dias + 1
	print(dias)
-- EXECUTION TIME:
0.120617
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 22:29:25) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


quanInCo = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia:"))
quanInLeu = int(input("Quantidade inicial de leucocitos no sangue:"))
PMultV = int(input("Percentual de multilicacao diaria do virus:"))/100
PMultL = int(input("Percentual de multilicacao diaria dos leucocitos:"))/100

dias = 0
while(quanInCo == quanInLeu/2):
	quanInCo = quanInCo + (quanInCo * PMultV)
	quanInLeu = quanInLeu + (quanInLeu * PMultL)
	dias = dias + 1
	print(dias)
-- EXECUTION TIME:
0.188009
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:

-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:

-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 22:29:25) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos"))
#pmv=int(input(percentual de multiplicaçao do virus: ))
#pml=int(input(percentual de multiplicaçao dos leucocitos: ))


quanInCo = int(input("Quantidade inicial de copias do virus no sangue de Micaleteia:"))
quanInLeu = int(input("Quantidade inicial de leucocitos no sangue:"))
PMultV = int(input("Percentual de multilicacao diaria do virus:"))/100
PMultL = int(input("Percentual de multilicacao diaria dos leucocitos:"))/100

dias = 0
while(quanInCo == quanInLeu/2):
	quanInCo = quanInCo + (quanInCo * PMultV)
	quanInLeu = quanInLeu + (quanInLeu * PMultL)
	dias = dias + 1
	print(dias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pml+int(input())/100
NameError: name 'pml' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 21:25:00) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicaçao do virus: "))
pml=int(input("percentual de multiplicaçao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( qic * pmv)
	qil = qil + ( qil * pml)
	d = d + 1
print(dias)


-- EXECUTION TIME:
0.138936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2504/main.py", line 19, in <module>
    print(dias)
NameError: name 'dias' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:25:00) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicaçao do virus: "))
pml=int(input("percentual de multiplicaçao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( qic * pmv)
	qil = qil + ( qil * pml)
	d = d + 1
print(dias)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:25:01) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicaçao do virus: "))
pml=int(input("percentual de multiplicaçao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( qic * pmv)
	qil = qil + ( qil * pml)
	d = d + 1
print(dias)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:25:07) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicaçao do virus: "))
pml=int(input("percentual de multiplicaçao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( qic * pmv)
	qil = qil + ( qil * pml)
	d = d + 1
print(dias)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:25:07) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicaçao do virus: "))
pml=int(input("percentual de multiplicaçao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( qic * pmv)
	qil = qil + ( qil * pml)
	d = d + 1
print(dias)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:25:07) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicaçao do virus: "))
pml=int(input("percentual de multiplicaçao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( qic * pmv)
	qil = qil + ( qil * pml)
	d = d + 1
print(dias)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:25:27) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( qic * pmv)
	qil = qil + ( qil * pml)
	d = d + 1
print(dias)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(dias)
NameError: name 'dias' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:25:44) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( qic * pmv)
	qil = qil + ( qil * pml)
	d = d + 1
print(d)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 21:27:56) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic * pmv + qic
	qil = qil * pml + qil
	d = d + 1
print(d)


-- EXECUTION TIME:
0.123769
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
2
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
1
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:27:56) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic * pmv + qic
	qil = qil * pml + qil
	d = d + 1
print(d)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:31:21) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))/100
pml=int(input("percentual de multiplicacao dos leucocitos: "))/100

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( pmv * qic)
	qil = qil + ( pml * qil )
	d = d + 1
print(d)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:32:44) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( pmv * qic)/100
	qil = qil + ( pml * qil )/100
	d = d + 1
print(d)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:33:29) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + ( ( pmv * qic)/100)
	qil = qil + ( ( pml * qil )/100)
	d = d + 1
print(d)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:35:01) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic * pmv
	qil = qil * pml
	d = d + 1
print(d)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:35:52) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = qic + pmv * pmv
	qil = qil + pml * pml
	d = d + 1
print(d)


-- OUTPUT:
62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:36:37) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic = ( qic + pmv )* pmv
	qil = ( qil + pml ) * pml
	d = d + 1
print(d)


-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 21:44:18) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic =  qic + ( qic + (qic/100) * pmv ) 
	qil =  qil + ( qil + (qil/100) * pml ) 
	d = d + 1
print(d)


-- EXECUTION TIME:
0.218365
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
14
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
6
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
26
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:44:18) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic =  qic + ( qic + (qic/100) * pmv ) 
	qil =  qil + ( qil + (qil/100) * pml ) 
	d = d + 1
print(d)


-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:44:24) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic =  qic + ( qic + (qic/100) * pmv ) 
	qil =  qil + ( qil + (qil/100) * pml ) 
	d = d + 1
print(d)


-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:44:55) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic =  qic + ( (qic/100) * pmv ) 
	qil =  qil + ( (qil/100) * pml ) 
	d = d + 1
print(d)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:45:41) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	qic =  qic + ( (qic/100) * pmv ) + pmv
	qil =  qil + ( (qil/100) * pml ) + pml
	d = d + 1
	print(d)


-- OUTPUT:
1
2
3
4
5
6
7
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:48:27) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	pmv=int(input("percentual de multiplicacao do virus: "))
	pml=int(input("percentual de multiplicacao dos leucocitos: "))
	qic =  qic + ( (qic/100) * pmv )
	qil =  qil + ( (qil/100) * pml ) 
	d = d + 1
	print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    pmv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:49:00) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	pmv=int(input("percentual de multiplicacao do virus: "))
	pml=int(input("percentual de multiplicacao dos leucocitos: "))
	qic =  qic + ( (qic/100) * pmv )
	qil =  qil + ( (qil/100) * pml ) 
	d = d + 1
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    pmv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:49:33) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil ):
	pmv=int(input("percentual de multiplicacao do virus: "))
	pml=int(input("percentual de multiplicacao dos leucocitos: "))
	qic =  qic + ( (qic/100) * pmv )
	qil =  qil + ( (qil/100) * pml ) 
	d = d + 1
	print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    pmv=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:15:07) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))/100
pml=int(input("percentual de multiplicacao dos leucocitos: "))/100

#variavel contadora

d = 0

while ( qic > qil ):
	qic =  qic +  ( qic * pmv )
	qil =  qil +  ( qil * pml ) 
	d = d + 1
print(d)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:15:12) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))/100
pml=int(input("percentual de multiplicacao dos leucocitos: "))/100

#variavel contadora

d = 0

while ( qic > qil ):
	qic =  qic +  ( qic * pmv )
	qil =  qil +  ( qil * pml ) 
	d = d + 1
print(d)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:16:11) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))/100
pml=int(input("percentual de multiplicacao dos leucocitos: "))/100

#variavel contadora

d = 0

while ( qic == qil/2 ):
	qic =  qic + ( qic * pmv )
	qil =  qil + ( qil * pml ) 
	d = d + 1
print(d)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:17:19) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))/100
pml=int(input("percentual de multiplicacao dos leucocitos: "))/100

#variavel contadora

d = 0

while ( qic > qil/2 ):
	qic =  qic + ( qic * pmv )
	qil =  qil + ( qil * pml ) 
	d = d + 1
print(d)


-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:17:34) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))/100
pml=int(input("percentual de multiplicacao dos leucocitos: "))/100

#variavel contadora

d = 0

while ( qic > qil/2 ):
	qic =  qic + ( qic * pmv )
	qil =  qil + ( qil * pml ) 
	d = d + 1
print(d)


-- EXECUTION TIME:
0.145847
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 22:21:21) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil/2 ):
	qic =  qic + ( qic * ( pmv/100) )
	qil =  qil + ( qil * ( pml/100) ) 
	d = d + 1
	print(d)


-- OUTPUT:
1
2
3
4
5
6
7
8
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:26:59) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil/2 ):
	qic =  qic + ( qic * ( pmv/100) )
	qil =  qil + ( qil * ( pml/100) ) 
	d = d + 1
print(d)


-- EXECUTION TIME:
0.147616
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 22:27:00) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora

d = 0

while ( qic > qil/2 ):
	qic =  qic + ( qic * ( pmv/100) )
	qil =  qil + ( qil * ( pml/100) ) 
	d = d + 1
print(d)


-- EXECUTION TIME:
0.126717
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:59:57) 
-- CODE:
#qic=int(input("Qunatidade inicial de copias: "))
#qil=int(input("Quantidade inical de leucocitos: "))
#pmv=int(input("percentual de multiplicaçao do virus: "))
#pml=int(input("percentual de multiplicaçao dos leucocitos: "))

qic=int(input("Qunatidade inicial de copias: "))
qil=int(input("Quantidade inical de leucocitos: "))
pmv=int(input("percentual de multiplicacao do virus: "))
pml=int(input("percentual de multiplicacao dos leucocitos: "))

#variavel contadora
d = 0

while ( qic > qil/2 ):
	qic =  qic + ( qic * ( pmv/100) )
	qil =  qil + ( qil * ( pml/100) ) 
	d = d + 1
print(d)


-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
